[package]
name = "blobs2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bao-tree = { version = "0.13.0", path = "../bao-tree" }
bytes = "1.10.0"
derive_more = { version = "2.0.1", features = ["from", "try_from", "into", "debug", "display", "deref", "deref_mut"] }
futures-lite = "2.6.0"
quinn = { package = "iroh-quinn", version = "0.13.0" }
n0-future = "0.1.2"
range-collections = "0.4.5"
redb = "2.4.0"
smallvec = "1.14.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tracing = "0.1.41"
iroh-io = "0.6.1"
rand = "0.9.0"
hex = "0.4.3"
serde = "1.0.217"
postcard = { version = "1.1.1", features = ["experimental-derive", "use-std"] }
data-encoding = "2.8.0"
chrono = "0.4.39"
nested_enum_utils = "0.1.0"

[dev-dependencies]
hex = "0.4.3"
iroh-test = "0.31.0"
proptest = "1.6.0"
serde_json = "1.0.138"
serde_test = "1.0.177"
tempfile = "3.17.1"
test-strategy = "0.4.0"
testresult = "0.4.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
tracing-test = "0.2.5"
