[package]
name = "blobs2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bao-tree = { version = "0.13.0", path = "../bao-tree", features = ["experimental-mixed"] }
bytes = { version = "1", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["from", "try_from", "into", "debug", "display", "deref", "deref_mut"] }
futures-lite = "2.6.0"
quinn = { package = "iroh-quinn", version = "0.13.0" }
n0-future = "0.1.2"
range-collections = "0.4.5"
redb = "2.4.0"
smallvec = { version = "1", features = ["serde", "const_new"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["full"] }
tracing = "0.1.41"
iroh-io = "0.6.1"
rand = "0.8.5"
hex = "0.4.3"
serde = "1.0.217"
postcard = { version = "1.1.1", features = ["experimental-derive", "use-std"] }
data-encoding = "2.8.0"
chrono = "0.4.39"
nested_enum_utils = "0.1.0"
ref-cast = "1.0.24"
arrayvec = "0.7.6"
iroh = "0.33.0"
self_cell = "1.1.0"
genawaiter = { version = "0.99.1", features = ["futures03"] }
iroh-base = "0.33.0"
reflink-copy = "0.1.24"
quic-rpc = { git = "https://github.com/n0-computer/quic-rpc", branch = "tabula-rasa", default-features = false }

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
hex = "0.4.3"
iroh-base = "0.33.0"
iroh-test = "0.31.0"
proptest = "1.6.0"
serde_json = "1.0.138"
serde_test = "1.0.177"
tempfile = "3.17.1"
test-strategy = "0.4.0"
testresult = "0.4.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
tracing-test = "0.2.5"
walkdir = "2.5.0"
